--- a/bower.json
+++ b/bower.json
@@ -9,6 +9,7 @@
   "homepage": "https://github.com/nzrylmz/socketio-live-balls",
   "dependencies": {
     "angular": "^1.7.8",
-    "semantic": "^2.4.1"
+    "semantic": "^2.4.1",
+    "jquery": "^3.3.1"
   }
 }
