--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www",
-    "start:dev": "nodemon ./bin/www"
+    "start": "nodemon ./bin/www",
+    "start:dev": "nodemon ./bin/www",
+    "postinstall": "./node_modules/bower/bin/bower install"
   },
   "dependencies": {
     "cookie-parser": "~1.4.3",
@@ -14,6 +15,6 @@
     "morgan": "~1.9.0",
     "pug": "2.0.0-beta11",
     "socket.io": "^2.2.0",
-    "bower": "^1.8.8"
+    "bower": "1.8.0"
   }
 }
