--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www",
+    "start": "nodemon ./bin/www",
     "start:dev": "nodemon ./bin/www"
   },
   "dependencies": {
@@ -13,7 +13,6 @@
     "http-errors": "~1.6.2",
     "morgan": "~1.9.0",
     "pug": "2.0.0-beta11",
-    "socket.io": "^2.2.0",
-    "bower": "1.8.0"
+    "socket.io": "^2.2.0"
   }
 }
